# spla_alert

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  mediamtx.yml
src/spla_alert/: __init__.py  cli.py  config.py  detector.py  source.py  weapons.py
src/spla_alert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_detector.py  test_source.py  test_weapons.py
webtest_outputs/: README.md  manifest.json
webtest_outputs/results/: inkipedia_s1_no_hud_turf_war_promo_1.json  inkipedia_s1_no_hud_turf_war_promo_3.json  inkipedia_s1_no_hud_turf_war_promo_5.json  inkipedia_s2_battle_ui_one_dead.json  inkipedia_s2_no_hud_splashdown_promo_1.json  inkipedia_s2_no_hud_splashdown_promo_2.json  inkipedia_s2_no_hud_turf_war_promo.json  inkipedia_s2_no_hud_ultra_stamp_promo.json  inkipedia_s2_spectator_map_view_no_top_hud.json  inkipedia_s2_spectator_view_action_two_dead.json  inkipedia_s2_spectator_view_all_alive.json  inkipedia_s2_spectator_view_close_all_alive.json  inkipedia_s2_spectator_view_two_dead.json  inkipedia_s3_no_hud_banners.json  inkipedia_s3_no_hud_crab_n_go.json  inkipedia_s3_no_hud_drop_into_battle.json  inkipedia_s3_no_hud_shop.json  inkipedia_s3_no_hud_splatsville_pig.json  inkipedia_s3_no_hud_squid_roll.json  inkipedia_s3_no_hud_tricolor_map.json  inkipedia_s3_no_hud_x100_battle_chance.json  inkipedia_s3_rainmaker_promotional.json  inkipedia_s3_replay.json  inkipedia_s3_replay_en.json  inkipedia_s3_replay_hidden_interface.json  reddit_s2_hud_dead_icon.json  (+3 more)
