[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spla-alert"
version = "0.1.0"
description = "Realtime Splatoon ally/enemy alive counter from stream or capture input."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "mss>=9.0",
]

[project.scripts]
spla-alert = "spla_alert.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
